examples/test/testpolicy9198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9198
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key12: value14
      key48: value31
      key10: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value30
          key28: value10
          key33: value30
